--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ContraTicketing</title>
+    <title>Cascade Promenade Admissions</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
 
   <body>
+    <%= flash_notice(flash) do %>
+      <%= sanitize(flash[:notice]) %>
+      <%= sanitize(flash[:alert]) %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
