--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -34,6 +34,8 @@
         <p>We strive to have an inclusive and safe environment for all people, regardless of race, religion, age, sexual orientation, gender identity and expression. We welcome new dancers.</p>
 
         <p>Any questions:  email contra@portlandcountrydance.org</p>
+
+        <!--  add some warning here about needing JS -->
         <p class="text-center"><%= link_to 'Continue...', new_order_path, class: 'btn btn-primary', id: 'continue-button' %></p>
       </div>
     </div>
