--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,43 +1,41 @@
-<section class="payment-form dark">
-  <div class="container">
-    <div class="block-heading">
-      <h2>Portland Megaband</h2>
-    </div>
-    <div class="row">
-      <div class="col-md-12 welcome">
-        <p>Thanks for your interest in the Portland Megaband Contra Dance. No need to print out this form -- just fill it in, click the Submit button at the bottom and follow online payment instructions on the next page.</p>
+<section class="welcome dark">
+  <div class="block-heading">
+    <h2>Portland Megaband</h2>
+  </div>
+  <div class="row">
+    <div class="col-md-12 welcome">
+      <p>Thanks for your interest in the Portland Megaband Contra Dance. No need to print out this form -- just fill it in, click the Submit button at the bottom and follow online payment instructions on the next page.</p>
 
-        <p>This is a benefit dance with the goal of raising money for the community grants fund. Due to the extra costs and lower capacity at this year's location, we are challenged to accomplish that goal. This year we are trying a sliding scale for the admission price: $10 - $25. If $10 is what you can afford, great, welcome. But if life has been good to you and you can do a bit more, we hope you will pitch in some extra for the good of the cause.</p>
+      <p>This is a benefit dance with the goal of raising money for the community grants fund. Due to the extra costs and lower capacity at this year's location, we are challenged to accomplish that goal. This year we are trying a sliding scale for the admission price: $10 - $25. If $10 is what you can afford, great, welcome. But if life has been good to you and you can do a bit more, we hope you will pitch in some extra for the good of the cause.</p>
 
-        <p>PCDC is a 501(c)(3) non-profit corporation. Any amount above $10 is a tax deductible donation. Let us know at the door if you would like a receipt.</p>
+      <p>PCDC is a 501(c)(3) non-profit corporation. Any amount above $10 is a tax deductible donation. Let us know at the door if you would like a receipt.</p>
 
-        <p>After submitting this form, you will see instructions on how to pay online. You are not confirmed until online payment is received.</p>
+      <p>After submitting this form, you will see instructions on how to pay online. You are not confirmed until online payment is received.</p>
 
-        <hr>
+      <hr>
 
-        <p>Event Details:</p>
+      <p>Event Details:</p>
 
-        <p>Saturday, March 10, 2018  |  8:00 - 11:15 pm</p>
+      <p>Saturday, March 10, 2018  |  8:00 - 11:15 pm</p>
 
-        <p>
-          This Year's Location:<br>
-          Tiffany Center in the Crystal Room<br>
-          1410 SW Morrison St, Portland
-        </p>
+      <p>
+        This Year's Location:<br>
+        Tiffany Center in the Crystal Room<br>
+        1410 SW Morrison St, Portland
+      </p>
 
-        <p>
-          This event is suitable for singles, couples, first-timers, and experienced dancers.<br>
-          It is not appropriate for small children unless they are on the sidelines supervised by adults at all times.<br>
-          It is fine for older children and teenagers who are comfortable interacting with adults on their own.
-        </p>
+      <p>
+        This event is suitable for singles, couples, first-timers, and experienced dancers.<br>
+        It is not appropriate for small children unless they are on the sidelines supervised by adults at all times.<br>
+        It is fine for older children and teenagers who are comfortable interacting with adults on their own.
+      </p>
 
-        <p>We strive to have an inclusive and safe environment for all people, regardless of race, religion, age, sexual orientation, gender identity and expression. We welcome new dancers.</p>
+      <p>We strive to have an inclusive and safe environment for all people, regardless of race, religion, age, sexual orientation, gender identity and expression. We welcome new dancers.</p>
 
-        <p>Any questions:  email contra@portlandcountrydance.org</p>
+      <p>Any questions:  email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a></p>
 
-        <!--  add some warning here about needing JS -->
-        <p class="text-center"><%= link_to 'Continue...', new_order_path, class: 'btn btn-primary', id: 'continue-button' %></p>
-      </div>
+      <p class="continue text-center alert alert-danger">This site requires JavaScript. I recommend downloading the <a href="https://www.google.com/chrome/" target=_blank>Google Chrome</a> or <a href="https://www.mozilla.org/en-US/firefox/" target=_blank>Mozilla Firefox</a> browser.</p>
+      <%= link_to 'Continue...', new_order_path, class: 'btn btn-dark continue d-none' %>
     </div>
   </div>
 </div>
