minor interface improvements

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -4,24 +4,19 @@
   </div>
   <div class="row">
     <div class="col-md-12 welcome">
-      <p>Thanks for your interest in the Portland Megaband Contra Dance. No need to print out this form -- just fill it in, click the Submit button at the bottom and follow online payment instructions on the next page.</p>
-
-      <p>This is a benefit dance with the goal of raising money for the community grants fund. Due to the extra costs and lower capacity at this year's location, we are challenged to accomplish that goal. This year we are trying a sliding scale for the admission price: $10 - $25. If $10 is what you can afford, great, welcome. But if life has been good to you and you can do a bit more, we hope you will pitch in some extra for the good of the cause.</p>
+      <p>Thanks for your interest in the Portland Megaband Contra Dance. This is a benefit dance with the goal of raising money for the community grants fund. This year we are trying a sliding scale for the admission price: $10 - $25. If $10 is what you can afford, great, welcome. But if life has been good to you and you can do a bit more, we hope you will pitch in some extra for the good of the cause.</p>
 
       <p>PCDC is a 501(c)(3) non-profit corporation. Any amount above $10 is a tax deductible donation. Let us know at the door if you would like a receipt.</p>
-
-      <p>After submitting this form, you will see instructions on how to pay online. You are not confirmed until online payment is received.</p>
 
       <hr>
 
       <p>Event Details:</p>
 
-      <p>Saturday, March 10, 2018  |  8:00 - 11:15 pm</p>
+      <p>Saturday, March...  |  8:00 - 11:15 pm</p>
 
       <p>
         This Year's Location:<br>
-        Tiffany Center in the Crystal Room<br>
-        1410 SW Morrison St, Portland
+        PSU...
       </p>
 
       <p>
