--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -52,10 +52,11 @@
       <div class="item">
         <p class="item-name">T-shirts</p>
         <div class="form-group">
+          <p class="small"><a href="#" target=_blank>Click here for t-shirt style & size guide</a> (opens in new tab)</p>
           <%= f.label :tshirt_quantity, 'Select total number of t-shirts ($15 each)', class: 'item-description' %>
           <span class="quantity"><%= f.number_field :tshirt_quantity, id: 'tshirt-quantity', min: 0, step: 1, value: @tshirt_quantity %></span>
         </div>
-        <div class="form-group">
+        <div class="form-group d-none" id="tshirt-note">
           <%= f.label :tshirt_note, 'Specify color and style for each shirt', class: 'item-description' %>
           <%= f.text_area :tshirt_note, maxlength: 255, rows: 3 %>
         </div>
