add test message

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,6 +1,7 @@
 <section class="welcome dark">
   <div class="block-heading">
     <h2>Portland Megaband</h2>
+    <h2>TEST - TICKETS NOT YET AVAILABLE</h2>
   </div>
   <div class="row">
     <div class="col-md-12 welcome">
