--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -7,9 +7,11 @@
   }
 
   .block-heading {
-      padding-top: 50px;
-      margin-bottom: 40px;
-      text-align: center;
+		padding-left: 15px;
+		padding-right: 15px;
+    padding-top: 50px;
+    margin-bottom: 40px;
+    text-align: center;
   }
 
   .block-heading p {
