add warnings about tickets not yet ready

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,6 +1,7 @@
 <section class="welcome dark">
   <div class="block-heading">
     <h2>Portland Megaband</h2>
+    <h2 class="alert alert-danger">Info not yet updated for 2019</h2>
   </div>
   <div class="row">
     <div class="col-md-12 welcome">
@@ -30,6 +31,7 @@
       <p>Any questions:  email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a></p>
 
       <p class="continue text-center alert alert-danger">This site requires JavaScript. I recommend downloading the <a href="https://www.google.com/chrome/" target=_blank>Google Chrome</a> or <a href="https://www.mozilla.org/en-US/firefox/" target=_blank>Mozilla Firefox</a> browser.</p>
+      <p id="not-yet-ready" class="text-center alert alert-danger">Ticket sales for 2019 are not yet ready.</p>
       <%= link_to 'Continue...', new_order_path, class: 'btn btn-dark continue d-none' %>
     </div>
   </div>
