update explanatory text

--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -15,7 +15,7 @@
         <% end %>
       </p>
       <hr>
-      <p><strong>Your name will be on a list at the door.</strong></p>
+      <p><strong>You will not receive a physical ticket; your name will be on a list at the door.</strong></p>
       <p>Please email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a> if you have any questions.</p>
     </div>
   </div>
