--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -2,6 +2,9 @@
   <div class="block-heading">
     <h2>megaband admissions & t-shirts</h2>
     <p>This is a benefit dance with the goal of raising money for the community grants fund. Please pay as much as you can, between $10 and $25 per admission.</p>
+    <br>
+    <p>Your name will be on a list at the door.</p>
+    <p>(You will not receive an actual ticket.)</p>
   </div>
   <%= form_for @order do |f| %>
     <%= render '/layouts/errors', object: @order %>
