--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -19,4 +19,4 @@
       <p>Please email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a> if you have any questions.</p>
     </div>
   </div>
-</div>
+</section>
