--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -35,4 +35,4 @@
       <%= link_to 'Continue...', new_order_path, class: 'btn btn-dark continue d-none' %>
     </div>
   </div>
-</div>
+</section>
