add link on receipt page to cascade promenade

--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -23,6 +23,7 @@
         A receipt has been sent to <%= @order.email %>.<br>
         Please email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a> if you have any questions.
       </p>
+      <p><a href="http://www.cascadepromenade.org/">See other Cascade Promenade events</a></p>
     </div>
   </div>
 </section>
