refactor to generalize for different events

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,6 +1,6 @@
 <section class="welcome dark">
   <div class="block-heading">
-    <h2>Portland Megaband</h2>
+    <h2><%= Rails.configuration.order[:browser_title] %></h2>
     <h2 class="alert alert-danger">Info not yet updated for 2019</h2>
   </div>
   <div class="row">
