--- a/app/assets/javascripts/stripe.js.erb
+++ b/app/assets/javascripts/stripe.js.erb
@@ -1,7 +1,7 @@
 $(function() {
-  if( $("body").hasClass('new') ) {
+  if( $("section").hasClass('payment-form') ) {
     // Create a Stripe client
-    var stripe = Stripe('pk_test_s37XBfVqAW9ZQKy0GVNNfsrI');
+    var stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
     var elements = stripe.elements();
 
     // Custom styling can be passed to options when creating an Element.
