--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,7 +1,7 @@
 <section class="payment-form dark">
   <div class="block-heading">
-    <h2>megaband admissions & t-shirts</h2>
-    <p>This is a benefit dance with the goal of raising money for the community grants fund. Please pay as much as you can, between $10 and $25 per admission.</p>
+    <h2><%= Rails.configuration.order[:order_form_title] %></h2>
+    <p><%= Rails.configuration.order[:order_form_description] %></p>
     <br>
     <p>Your name will be on a list at the door.</p>
     <p>(You will not receive an actual ticket.)</p>
@@ -35,36 +35,40 @@
     </div>
 
     <div class="products">
-      <h3 class="title">Select admissions and/or t-shirts:</h3>
+      <h3 class="title"><%= Rails.configuration.order[:tshirts_available] ? 'Select admissions and/or t-shirts:' : 'Select admissions:' %></h3>
       <div class="item">
-        <p class="item-name">Megaband Admissions</p>
-        <div class="form-group" id="admission-cost-group">
-          <%= f.label :admission_cost, 'How much are you able to pay per admission? ($10-25)', class: 'item-description' %>
-          <span class="quantity">
-            <div class="input-group-prepend">
-              <span class="input-group-text">$</span>
-              <%= f.number_field :admission_cost, id: 'admission-cost', min: 10, max: 25, step: 1, value: @admission_cost %>
-            </div>
-          </span>
-        </div>
+        <p class="item-name"><%= Rails.configuration.order[:short_name] %> Admissions</p>
+        <% if Rails.configuration.order[:admission_cost] == 0 %>
+          <div class="form-group" id="admission-cost-group">
+            <%= f.label :admission_cost, 'How much are you able to pay per admission? ($10-25)', class: 'item-description' %>
+            <span class="quantity">
+              <div class="input-group-prepend">
+                <span class="input-group-text">$</span>
+                <%= f.number_field :admission_cost, id: 'admission-cost', min: 10, max: 25, step: 1, value: @admission_cost %>
+              </div>
+            </span>
+          </div>
+        <% end %>
         <div class="form-group" id="admission-quantity-group">
           <%= f.label :admission_quantity, 'Select admissions quantity', class: 'item-description' %>
           <span class="quantity"><%= f.number_field :admission_quantity, id: 'admission-quantity', min: 0, step: 1, value: @admission_quantity %></span>
         </div>
       </div>
-      <hr>
-      <div class="item">
-        <p class="item-name">T-shirts</p>
-        <div class="form-group">
-          <p class="small"><a href="/tshirts" target=_blank>Click here for t-shirt style & size guide</a> (opens in new tab)</p>
-          <%= f.label :tshirt_quantity, 'Select total number of t-shirts ($15 each)', class: 'item-description' %>
-          <span class="quantity"><%= f.number_field :tshirt_quantity, id: 'tshirt-quantity', min: 0, step: 1, value: @tshirt_quantity %></span>
+      <% if Rails.configuration.order[:tshirts_available] %>
+        <hr>
+        <div class="item">
+          <p class="item-name">T-shirts</p>
+          <div class="form-group">
+            <p class="small"><a href="/tshirts" target=_blank>Click here for t-shirt style & size guide</a> (opens in new tab)</p>
+            <%= f.label :tshirt_quantity, 'Select total number of t-shirts ($15 each)', class: 'item-description' %>
+            <span class="quantity"><%= f.number_field :tshirt_quantity, id: 'tshirt-quantity', min: 0, step: 1, value: @tshirt_quantity %></span>
+          </div>
+          <div class="form-group d-none" id="tshirt-note">
+            <%= f.label :tshirt_note, 'Specify color and style for each shirt', class: 'item-description' %>
+            <%= f.text_area :tshirt_note, maxlength: 255, rows: 3 %>
+          </div>
         </div>
-        <div class="form-group d-none" id="tshirt-note">
-          <%= f.label :tshirt_note, 'Specify color and style for each shirt', class: 'item-description' %>
-          <%= f.text_area :tshirt_note, maxlength: 255, rows: 3 %>
-        </div>
-      </div>
+      <% end %>
       <div class="total">
         <p>Total $<span id="total-price"></span></p>
         <p class="small" id="total-admissions"></p>
