add details about megaband time and location

--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -20,10 +20,16 @@
         </p>
       <% end %>
       <p>
+        Saturday, March 9, 2019<br>
+        7:30 lesson | 8-11 dance<br>
+        PSU Smith Memorial Center Ballroom<br>
+        1825 SW Broadway, Portland, Oregon
+      </p>
+      <p>
         A receipt has been sent to <%= @order.email %>.<br>
         Please email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a> if you have any questions.
       </p>
-      <p><a href="http://www.cascadepromenade.org/">Check out other Cascade Promenade events!</a></p>
+      <p><a href="http://www.cascadepromenade.org/dance/2019/01/06/Cascade-Promenade-2019.html">Check out other Cascade Promenade dances!</a></p>
     </div>
   </div>
 </section>
