--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -4,7 +4,16 @@
     <p><%= Rails.configuration.order[:order_form_description] %></p>
     <br>
     <p>Your name will be on a list at the door.</p>
-    <p>(You will not receive an actual ticket.)</p>
+    <p>(You will not receive actual tickets.)</p>
+    <br>
+    <p>
+      Saturday, March 9, 2019<br>
+      7:30 lesson | 8-11 dance<br>
+      PSU Smith Memorial Center Ballroom<br>
+      1825 SW Broadway, Portland, Oregon
+    </p>
+    <br>
+    <p>Questions? Email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a>.</p>
   </div>
   <%= form_for @order do |f| %>
     <%= render '/layouts/errors', object: @order %>
