debug: stripe_publishable_key

--- a/app/assets/javascripts/stripe.js.erb
+++ b/app/assets/javascripts/stripe.js.erb
@@ -1,7 +1,9 @@
 $(function() {
   if( $("section").hasClass('payment-form') ) {
     // Create a Stripe client
-    var stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
+    var stripe_publishable_key = '<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>'
+    console.log(stripe_publishable_key);
+    var stripe = Stripe(stripe_publishable_key);
     var elements = stripe.elements();
 
     // Custom styling can be passed to options when creating an Element.
