update info about dance

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -8,8 +8,8 @@
     <br>
     <p>
       Saturday, March 9, 2019<br>
-      7:30 lesson | 8-11 dance<br>
-      PSU Smith Memorial Center Ballroom<br>
+      7:30 lesson | 8-11:15 dance<br>
+      PSU Smith Memorial Center Ballroom, 3rd Floor<br>
       1825 SW Broadway, Portland, Oregon
     </p>
     <br>
