--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -16,17 +16,19 @@
         <p>
           Megaband t-shirts:<br>
           <%= @order.tshirt_quantity %> x $<%= @order.tshirt_cost %> = $<%= @order.tshirt_quantity * @order.tshirt_cost %><br>
-          <%= @order.tshirt_note %>
+          <%= @order.tshirt_note %><br>
+          T-shirts can be picked up at the dance.
         </p>
       <% end %>
       <p>
         Saturday, March 9, 2019<br>
-        7:30 lesson | 8-11 dance<br>
-        PSU Smith Memorial Center Ballroom<br>
+        7:30 lesson | 8-11:15 dance<br>
+        PSU Smith Memorial Center Ballroom, 3rd Floor<br>
         1825 SW Broadway, Portland, Oregon
       </p>
+      <p>Paid parking is available in the parking structure across Broadway from the building.</p>
       <p>
-        A receipt has been sent to <%= @order.email %>.<br>
+        A receipt has been sent to <%= @order.email %>. Please check your spam folder if you do not see it.<br>
         Please email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a> if you have any questions.
       </p>
       <p><a href="http://www.cascadepromenade.org/dance/2019/01/06/Cascade-Promenade-2019.html">Check out other Cascade Promenade dances!</a></p>
