update tshirt info

--- a/app/views/static_pages/tshirts.html.erb
+++ b/app/views/static_pages/tshirts.html.erb
@@ -1,7 +1,6 @@
 <section class="welcome dark">
   <div class="block-heading">
-    <h2>megaband t-shirts info</h2>
-    <h2 class="alert alert-danger">Info not yet updated for 2019</h2>
+    <h2>2019 Megaband T-shirts</h2>
   </div>
   <div class="row">
     <div class="col-md-12 welcome">
@@ -9,83 +8,34 @@
       <p class="card">
         Short sleeve shirts are $20.<br>
         Long sleeve shirts are $30.<br>
-        Order deadline is February 14.<br>
+        Order deadline is March 7.<br>
         Shirts available by online order only.<br>
         All shirts must be picked up at the dance.<br>
         There will not be additional shirts for sale at the dance.
       </p>
 
       <figure id="design">
-        <img src="/images/megaband_shirt_2018.jpg" width="300"></img>
-        <figcaption>Megaband 2018 T-shirt Design</figcaption>
+        <img src="/images/tshirt_design_2019.jpg" width="300"></img>
+        <figcaption>2019 T-shirt Design</figcaption>
       </figure>
 
-      <div class="card" id="swatches">
+      <div class="card">
+        <figure id="swatches">
+          <p><strong>Available in these 4 colors only</strong></p>
+          <img src="/images/tshirt_colors_2019.jpg" width="800"></img>
+          <figcaption>black / red / brown / gray</figcaption>
+        </figure>
+      </div>
+
+      <div class="card">
         <p>
-          Colors for style <em>Bayside 5100</em> (&ldquo;unisex t-shirt&rdquo;) - $20<br>
-          (<strong><a href="/images/Bayside5100.pdf" target=_blank>style guide & size chart</a></strong>)
+          <strong>Available in these 4 styles</strong><br>
+          (Only available in black, red, brown, and gray.)
         </p>
-        <div class="row">
-          <figure class="swatch">
-            <img src="/images/charcoal_sample.jpg">
-            <figcaption>charcoal</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/gold_sample.jpg">
-            <figcaption>gold</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/carolina_blue_sample.jpg">
-            <figcaption>carolina blue</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/lime_green_sample.jpg">
-            <figcaption>lime green</figcaption>
-          </figure>
-        </div>
-        <hr>
-        <p>
-          Colors for style <em>Bayside 3325</em> (&ldquo;women's t-shirt&rdquo;) - $20<br>
-          <span id="size-warning">Sizes reportedly run small.</span><br>
-          (<strong><a href="/images/Bayside3325.pdf" target=_blank>style guide & size chart</a></strong>)
-        </p>
-        <div class="row">
-          <figure class="swatch">
-            <img src="/images/purple_sample.jpg">
-            <figcaption>purple</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/teal_sample.jpg">
-            <figcaption>teal</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/carolina_blue_sample.jpg">
-            <figcaption>carolina blue</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/lime_green_sample.jpg">
-            <figcaption>lime green</figcaption>
-          </figure>
-        </div>
-        <hr>
-        <p>
-          Colors for style <em>Bayside 6100</em> (&ldquo;unisex long sleeve&rdquo;) - $30<br>
-          (<strong><a href="/images/Bayside6100.pdf" target=_blank>style guide & size chart</a></strong>)
-        </p>
-        <div class="row">
-          <figure class="swatch">
-            <img src="/images/sand_sample.jpg">
-            <figcaption>sand</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/charcoal_sample.jpg">
-            <figcaption>charcoal</figcaption>
-          </figure>
-          <figure class="swatch">
-            <img src="/images/lime_green_sample.jpg">
-            <figcaption>lime green</figcaption>
-          </figure>
-        </div>
+        <p>&ldquo;Women's Short Sleeve Fine Jersey Tee&rdquo; [$20] <a href="https://www.royalapparel.net/5001w-women-s-short-sleeve-fine-jersey-tee.html" target=_blank>(view style guide in new tab)</a></p>
+        <p>&ldquo;Unisex Short Sleeve Fine Jersey Tee&rdquo; [$20] <a href="https://www.royalapparel.net/unisex-short-sleeve-fine-jersey-tee-5051.html" target=_blank>(view style guide in new tab)</a></p>
+        <p>&ldquo;Women's Long Sleeve Crew Tee&rdquo; [$30] <a href="https://www.royalapparel.net/l-s-crew-tee-10476.html" target=_blank>(view style guide in new tab)</a></p>
+        <p>&ldquo;Unisex Long Sleeve Tee&rdquo; [$30] <a href="https://www.royalapparel.net/l-s-crew-tee.html" target=_blank>(view style guide in new tab)</a></p>
       </div>
 
       <h2 class="alert alert-warning">Please return to the order form to place your order.</h2>
